--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -1,6 +1,6 @@
 * {
     box-sizing: border-box;
-    background-color: rgb(214, 210, 217);
+    background-color: rgb(179, 207, 225);
 }
 
 header {
@@ -11,20 +11,18 @@ header {
 
 main {
     margin: 2rem;
-    border: 2px solid rgb(211, 253, 0);
     padding: 1rem;
-
+    display: block;
 }
 
 .hero {
-    border: 2px solid red;
-    padding: 1rem;
+    border: 5px solid rgb(3, 242, 218);
+    margin-bottom: 2rem;
 }
 
 .img-hero {
     width: 100%;
     height: 20rem;
-    border: 2px solid rgb(46, 215, 164);
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -37,23 +35,21 @@ main {
 
 .wrapper {    
     /* width: 100%; */
-    border: 2px solid rgb(253, 0, 219);
     display: flex;
     gap: 1rem;
     flex-wrap: wrap;
-    padding: 1rem;
 }
 
 .article-wrapper {
     flex: 1 1 40%;      /*this help to have space for div to move */
     gap: 1.5rem;
-    border: 2px solid rgb(162, 219, 4);
+    border: 5px solid rgb(3, 242, 218);
 }
 
 .img-article {
     width: 100%;
     height: 25rem;
-    border: 2px solid rgb(209, 46, 215);
+    /* border: 2px solid rgb(209, 46, 215); */
     background-size: cover;
     background-repeat: no-repeat;
 }
