--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -8,6 +8,8 @@ body {
 }
 
 header {
+    position: fixed;
+    top: 0;
     height: 10%;
     background-color: red;
 }
@@ -15,6 +17,7 @@ header {
 main {
     position: fixed;
     top: 10%;
+    width: 100%;
     height: 85%;
     background-color: black;
     display: flexbox;
@@ -36,6 +39,7 @@ main {
 }
 
 footer {
+    position: fixed;
     height: 5%;
     bottom: 0;
     background-color: blue;
