--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -1,16 +1,24 @@
 * {
     box-sizing: border-box;
-    background-color: rgb(179, 207, 225);
+    margin: 0;
+    padding: 0;
+}
+
+body {
+    padding-left: 6rem;
+    padding-right: 6rem;
+    background-color: rgb(228, 228, 228);
+
 }
 
 header {
+    margin-top: 1rem;
     text-align: center;
     gap: 1rem;
 }
 
 
 main {
-    margin: 2rem;
     padding: 1rem;
     display: block;
 }
@@ -22,19 +30,18 @@ main {
 
 .img-hero {
     width: 100%;
-    height: 20rem;
+    height: 25rem;
     background-size: cover;
     background-repeat: no-repeat;
 }
  
 .overlay {
-    background-color: rgba(0, 0, 0, 0.5); /* layer transparent for to read the text */
-    color: white;
-    margin: 2rem;
+    background-color: rgba(127, 176, 255, 0.189); /* layer transparent for to read the text */
+    color: rgb(30, 17, 75);
+    padding: 2rem;
 } 
 
 .wrapper {    
-    /* width: 100%; */
     display: flex;
     gap: 1rem;
     flex-wrap: wrap;
@@ -52,3 +59,82 @@ main {
     /* border: 2px solid rgb(209, 46, 215); */
 }
 
+
+  /*  ------------footer section ----------------*/
+
+footer {
+    padding-top: 1rem;
+    margin-left: -6rem;
+    margin-right: -6rem;
+    /* border: 5px solid rgb(220, 18, 183); */
+    background-color: #616aeb;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    height: 4rem;
+    gap: 1rem;
+    /* padding: 1rem 0; */
+    box-sizing: border-box;
+    color: white;
+}
+
+.social {
+    display: flex;
+    background-color: #616aeb;
+    /* flex-direction: row; */
+    justify-content: space-around;
+    /* align-items: center; */
+    /* text-align: center; */
+    flex-wrap: wrap;
+    width: 100%;
+    /* text-align: center; */
+}
+
+
+footer .social  a{
+    font-size: 35px;
+    color: cyan;
+    transition: all .5s ease;
+    padding-bottom: 1rem;
+}
+
+footer .social .facebook:hover{
+    transform: scale(2.1,2.1);
+    color: rgb(7, 7, 108);
+}
+
+footer .social .twitter:hover{
+    transform: scale(2.1,2.1);
+    color: #ffffff;
+    text-shadow: 0 0 10px #4de7f5, 0 0 8px #08fef6;
+    color: RGB 255, 255, 255;
+}
+
+footer .social .youtube:hover{
+    transform: scale(2.1,2.1);
+    color: rgb(191, 3, 3);
+}
+
+footer .social .github:hover{
+    transform: scale(2.1,2.1);
+    color: rgb(4, 4, 10);
+}
+
+footer .social .instagram:hover{
+    color: transparent;
+    transform: scale(2.1,2.1);
+    background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+    background: -webkit-radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%, #d6249f 60%, #285AEB 90%);
+    background-clip: text;
+    -webkit-background-clip: text;
+}
+
+/* 1st option but one color */
+
+/* footer .social .instagram:hover{
+    transform: scale(2.1,2.1);
+    color: rgba(155, 20, 176, 0.662);
+} */
+
+/* 2nd option with gradient color  the best one*/
