--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -10,7 +10,8 @@ body {
 header {
     position: fixed;
     top: 0;
-    height: 10%;
+    width: 100%;
+    height: 5%;
     background-color: red;
     z-index: 3;
 }
@@ -41,6 +42,7 @@ main {
 
 footer {
     position: fixed;
+    width: 100%;
     height: 5%;
     bottom: 0;
     background-color: blue;
