--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -21,7 +21,7 @@ main {
     top: 10%;
     width: 100%;
     height: 85%;
-    background-color: black;
+    background-color: burlywood;
     display: flexbox;
 }
 
