--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -11,16 +11,25 @@ header {
     position: fixed;
     top: 0;
     width: 100%;
-    height: 5%;
+    height: 20%;
+    display: flex; /* Using flexbox to centre the content */
+    flex-direction: column; /* Vertical arrangement of elements */
+    justify-content: center; /* Centre the content vertically */
+    align-items: center; /* Centre the content horizontally */
+    box-sizing: border-box; /* Включаем отступы в расчет ширины и высоты */
     background-color: red;
-    z-index: 3;
+}
+
+h1, h2 {
+    margin: 0;
+    text-align: center;
 }
 
 main {
     position: fixed;
     top: 10%;
     width: 100%;
-    height: 85%;
+    height: 70%;
     background-color: burlywood;
     display: flexbox;
 }
@@ -31,7 +40,11 @@ main {
 }
 
 .section_secondary_wrapper {
-    display: flex;
+    position: relative;
+    display: flex; /* Using flexbox to centre the content */
+    flex-direction: row; /* Vertical arrangement of elements */
+    justify-content: center; /* Centre the content vertically */
+    align-items: center; /* Centre the content horizontally */
 }
 
 [class^="article_"] {
@@ -43,8 +56,12 @@ main {
 footer {
     position: fixed;
     width: 100%;
-    height: 5%;
+    height: 10%;
     bottom: 0;
+    display: flex; /* Using flexbox to centre the content */
+    flex-direction: column; /* Vertical arrangement of elements */
+    justify-content: center; /* Centre the content vertically */
+    align-items: center; /* Centre the content horizontally */
     background-color: blue;
 }
 
