--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -1,68 +1,76 @@
 body {
-    margin: 0;
-    padding: 0;
-    font-family: poppins;
-    background-color: #74c69d;
+  margin: 0;
+  padding: 0;
+  font-family: poppins;
+  background-color: #74c69d;
+  margin: 50px;
+  padding: 10px;
 }
 
-
-
 .wrapper {
-    padding: 10px;
-    max-width: 960px;
-    width: 95%;
-    margin: 20px auto;
-
-
+  padding: 10px;
+  max-width: 960px;
+  width: 95%;
+  margin: 20px auto;
 }
 
 header {
-    padding: 0 15px;
-    text-align: center;
-    font-size: 20px;
-    margin: 4em;
-
+  padding: 0 15px;
+  text-align: center;
+  font-size: 20px;
+  margin: 4em;
 }
 
-.columns {
-    display: flex;
-    flex-flow: row;
-    justify-content: center;
-    margin: 5px 0;
+.first-row {
+  border: 1px solid black;
+  font-size: 16px;
+}
 
+.first-img {
+  width: 66%;
+  height: 45vh;
+  padding: 30px;
+}
+
+.text {
+  padding: 10px;
+  padding: 20px;
+  margin: 2px;
+}
+.columns {
+  display: flex;
+  flex-flow: row;
+  justify-content: center;
+  margin: 5px 0;
+  font-size: 16px;
 }
 
 .column {
-    flex: 1;
-    border: 1px solid black;
-    margin: 6px;
-    padding: 10px;
-
-
+  flex: 1;
+  border: 1px solid black;
+  margin: 6px;
+  padding: 20px;
 }
 
 .column:first-child {
-    margin-left: 0;
-    background: #95d5b2;
+  margin-left: 0;
+  background: #95d5b2;
 }
 
-.footer { 
-    position:static;
-    bottom: 0; 
-    left: 0; 
-    text-align: center;
-    width: 100%;
-
-    
+.footer {
+  position: static;
+  bottom: 0;
+  left: 0;
+  text-align: center;
+  width: 100%;
+  margin: 0;
+  padding: 20px;
 }
-    
 
-
-
-
-
-   
-
-
-
-
+img {
+  width: 79%;
+  border-radius: 4px;
+  margin: auto;
+  padding: 8px;
+  height: 28%;
+}
