--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -1,3 +1,4 @@
+
 body {
   font-size: 20px;
   color: black;
@@ -25,7 +26,7 @@ article{
 
 article:first-child {
   margin-bottom: 10px;
-  border: 1.0px solid white;
+  border: 1px solid white;
   border-radius: 15px;
   height: auto;
 }
@@ -40,14 +41,18 @@ article:first-child {
 
 #other-article-title{
   display: flex;
-  width: 991px;
+  justify-content: space-between;
+  margin-left: 100px;
+  width: 100%;
+  height: 500px;
   margin:5px;
-  border: 0.1px solid white;
+  border: 1px solid white;
   border-radius: 15px;
 }
 .article-two-three-width{
-  width: 480px;
-  border: 0.1px solid white;
+  width: 48%;
+  height: auto;
+  border: 1px solid white;
   margin: 0;
 height: auto;
 }
@@ -67,17 +72,21 @@ p{
 }
 .section-content{
   text-align: justify;
+
 }
 
 #footer {
+  font-size: 30px;
   position:fixed;
+  left:0;
   bottom:0px;
-  height:30px;
+  height:70px;
   width:100%;
+  background: wheat;
 }
 
-
 a.button {
+  height: 30px;
   font-size: 20px;
   padding: 1px 6px;
   border: 1px outset buttonborder;
