--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -36,19 +36,19 @@ main {
 
 [class^="section_"] {
     width: 100%;
-    height: 40%;
+    height: 50%;
 }
 
 .section_secondary_wrapper {
     position: relative;
     display: flex; /* Using flexbox to centre the content */
     flex-direction: row; /* Vertical arrangement of elements */
-    justify-content: center; /* Centre the content vertically */
+    justify-content: space-around; /* Centre the content vertically */
     align-items: center; /* Centre the content horizontally */
 }
 
 [class^="article_"] {
-    width: 45%;
+    width: 48%;
     height: 100%;
     background-color: aquamarine;
 }
