--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -15,15 +15,14 @@ body {
 }
 
 header {
-    margin-top: 1.5 rem;
+    margin-top: 2rem;
     text-align: center;
     gap: 1rem;
     color:#0008ff;
-    font-weight: 400;
+    font-weight: 550;
     font-size: medium;
     
 }
-
 
 main {
     padding: 1rem;
@@ -47,14 +46,14 @@ h2 {
     color: #0008ff;
     font-family: "Kalnia", serif;
     font-optical-sizing: auto;
-    font-weight: 445;
+    font-weight: 555;
     font-style: normal;
     font-variation-settings:
       "wdth" 112.3;
 }
 
 .hero {
-    border: 5px solid rgb(3, 242, 218);
+    border: 3px solid rgb(3, 242, 218);
     margin-bottom: 2rem;
 }
 
@@ -85,7 +84,7 @@ h2 {
 .article-wrapper {
     flex: 1 1 40%;      /*this help to have space for div to move */
     gap: 1.5rem;
-    border: 5px solid rgb(3, 242, 218);
+    border: 3px solid rgb(3, 242, 218);
 }
 
 .img-article {
@@ -98,18 +97,18 @@ h2 {
 
 
 button {
-    background-color: #353cff; /* Color de fondo */
-    border: none; /* Sin borde */
-    color: white; /* Color del texto */
-    padding: 10px 20px; /* Espaciado interno */
-    text-align: center; /* Centrado del texto */
-    text-decoration: none; /* Sin subrayado */
-    display: inline-block; /* Mostrar en línea */
+    background-color: #353cff; 
+    border: none; 
+    color: white; 
+    padding: 10px 20px; 
+    text-align: center; 
+    text-decoration: none; 
+    display: inline-block; 
     font-size: 16px; 
     margin: 1rem;
-    cursor: pointer; /* Cambiar el cursor al pasar */
-    border-radius: 5px; /* Bordes redondeados */
-    transition: background-color 0.3s; /* Efecto de transición */
+    cursor: pointer; 
+    border-radius: 5px;
+    transition: background-color 0.3s;
     
 }
 
