styling input, labels and button

--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -6,15 +6,22 @@ body {
 }
 
 .wrapper {
-    width: 80%;
+    width: 70%;
     margin: 0 auto;
     padding: 1rem;
+    
+   
+   
 }
 
 fieldset {
     border: #d5bdaf 3px solid;
     border-radius: 10px;
-    background-color: #d6ccc2;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-bottom: 20px;
+    padding-top: 20px;
+    margin-bottom: 1rem;
 }
 
 footer {
@@ -23,15 +30,55 @@ footer {
 
 }
 
-#button {
-    margin-top: 20px;
+button {
+    margin-top: 1rem;
+    padding: 0.5rem 0.7rem;
     width: 200px;
-    height: 40px;
     background-color: #d6ccc2;
-    border-radius: 50px;
-    border: 3px solid #d5bdaf;
+    border-radius: 10px;
+    border: 3px solid #d6ccc2;
     font-size: 18px;
-    color: #495057;
-    
+    color: #495057;    
     
 }
+button:hover {
+    background-color: #495057;
+    color:#d6ccc2;
+}
+
+
+p {
+    margin-top: 0;
+}
+
+legend{
+    font-weight: bold;
+}
+
+label {
+    display: block;
+    margin-bottom: 0.3rem;
+}
+
+select {
+    font-size: 1rem;
+    display:block;
+    margin-bottom: 1rem;
+    width: 22rem;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 0.1rem 1rem;
+    border-radius: 10px;
+    border: none;
+}
+
+input {
+    display: block;
+    margin-bottom: 1rem;
+    width: 20rem;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 1rem;
+    padding: 0.1rem 1rem;
+    border-radius: 10px;
+    border: none;
+}
+
