--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -1,37 +1,29 @@
 
+body{
+    background-color:white;
+    border: 3px solid black;
+}
+
 .git-info {
     text-align: center;
     display: block; 
     margin: 0 auto;
 }
+.git-link {
+    margin-bottom: 50px;
+}
 .git-logo {
-    width: 400px; 
+    width: 300px; 
     height: auto;
 }
-.developer-image{
-    width: 200px; 
-    height: auto;
-    padding-left: 20px;
-    margin-top: 20px;
-    margin-left:20px;
-    margin-right:300px;
-}
-.git-branch-image{
-    width: 650px; 
-    height: auto;
-    
 
-body{
-    background-color: black;
-    border: 3px solid black;
-}
 h1:first-child {
     color: purple;
 
 }
     h1 {
         color: green;
-        font-size: 40px;     
+        font-size: 30px;     
     }
     p {
 font-size: 20px;
@@ -40,7 +32,7 @@ font-size: 20px;
 .container { 
      text-align: center;
      display: block; 
-     margin: 0 auto;
+     
  }
  #git-branch {
     color:green;
@@ -48,28 +40,36 @@ font-size: 20px;
 
 .articles-container {
     display: flex;
-    justify-content: space-between; /* Space between articles */
-    gap: 20px; /* Optional gap between articles */
+    justify-content: space-between; 
+    
 }
 
 .article {
-    flex: 1; /* Make each article take equal width */
-    border: 1px solid #ccc; /* Optional border */
-    padding: 15px; /* Padding for article */
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); /* Optional shadow */
+    flex: 1; 
+    border: 3px ;
+    padding: 25px; 
+    padding-top:20px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); 
+    gap: 20px;
+    margin-left:20px ;
+    margin-right:0px;
+    ;
 }
 
 .article img {
-    max-width: 100%; /* Ensure images are responsive */
-    height: auto; /* Maintain aspect ratio */
+     
+    width: 450px; /* Set fixed width */
+    height: 300px; /* Set fixed height */
+    object-fit: cover; /* Maintain aspect ratio, cropping if necessary */
+    padding-right: 0px;
+    margin-top: 50px;
+
 }
 
 .article-summary {
-    color: #555; /* Example summary text color */
-    font-size: 14px; /* Example summary text size */
+    color: #555; 
+    font-size: 17px; 
 }
-
-
   
   .footer {
     display: flex;             
