--- a/Form-Controls/styles.css
+++ b/Form-Controls/styles.css
@@ -62,6 +62,7 @@ label {
 
 select {
     font-size: 1rem;
+    color: #495057;
     display:block;
     margin-bottom: 1rem;
     width: 22rem;
@@ -77,6 +78,7 @@ input {
     width: 20rem;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 1rem;
+    color: #495057;
     padding: 0.1rem 1rem;
     border-radius: 10px;
     border: none;
