--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -22,7 +22,6 @@ body{
 }
 
 .main-section{ 
-    /* border-bottom:0.5rem solid rgb(207, 205, 202); */
     padding: 2rem 0;
     border-radius: 0.3rem;
 }
@@ -38,7 +37,7 @@ h1,h2,h3,h4{
     font-weight: bold;
     color:rgb(98, 98, 97)
 }
-a{
+a:link{
     text-decoration: none;
     cursor: pointer;
     color: blue;
@@ -49,4 +48,12 @@ a{
     margin-top:16rem;
     padding: 2rem 0;
     background-color: rgb(207, 205, 202);
+}
+
+@media screen  and (max-width:640px){
+    .footer-container{
+        margin-top:50rem;
+       
+    }
+    
 }
