--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -25,7 +25,7 @@ body {
     background-image: url("https://images.unsplash.com/photo-1650295751050-b184e54e177c?q=80&w=1887&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D");
     background-size: cover;
     opacity: 0.6;   
-    z-index: -1;
+    z-index: -100;
   }
   header, h1, p, hr{
     margin: 0;
@@ -77,13 +77,10 @@ body {
     box-shadow: 2px 2px 10px #000 ; 
     
 }
-main{
-    margin: 0 auto;
+main{  
     width: 100%;
     background-color: #FAF0E699;
-    position: relative;
-    padding-left: 10px;
-    padding-top: 10px;
+    position: relative;   
 }
 footer{
     margin: 0 auto;
@@ -125,8 +122,8 @@ button a{
     box-shadow: 5px 2px 10px;
 }
 #article-1{
-    width: 100%;
-    margin: 10px 0;
+    width: 98%;
+    margin: 10px auto;
     background-color: #F5F5F599;
     padding: 10px;
     border-radius: 10px;
