--- a/style.css
+++ b/style.css
@@ -63,7 +63,7 @@ main {
 }
 
 .articles img {
-    width: 600;
+    width: 100%;
     height: 400;
     border-radius: 5px;
     margin-bottom: 15px;
