--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -1,59 +1,9 @@
-body {
-    font-family: sans-serif;
+ 
+
+* {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-}
-
-header {
-    background-color: #f0f0f0;
-    padding: 20px;
-    text-align: center;
-}
-
-main {
-    padding: 20px;
-}
-
-section {
-    display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
-}
-
-article {
-    width: 30%;
-    margin-bottom: 20px;
-    padding: 10px;
-    border: 1px solid #ccc;
-}
-
-article:first-child {
-    background-color: #f7f7f7;
-}
-
-.read-more {
-    display: block;
-    margin-top: 10px;
-    text-decoration: none;
-    color: blue;
-}
-
-footer {
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-    background-color: #333;
-    color: #fff;
-    padding: 10px;
-    text-align: center;
-}
-
-a {
-    text-decoration: none;
-    color: blue;
-}
-
-a:hover {
-    color: #0066cc;
-}
- 
+  }
+  
+  
