--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -31,7 +31,21 @@
     padding: 2em;
   }
 
-  section{}
+  section {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content:center;
+  }
+
+  article {
+    margin: 1em;
+    padding: 2em;
+    width: calc(33.33% - 2em);
+    background-color: #fff;
+    border: 1px solid #ddd;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+
 
   
   
