--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -10,4 +10,12 @@ body {
   color: #333;
   background-color: #f9f9f9;
 } 
- 
+
+
+header {
+  background-color: #333;
+  color: #fff;
+  padding: 1em;
+  text-align: center;
+}
+
