--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -22,3 +22,12 @@ header {
 header h1 {
   margin-bottom: 0.5em;
 }
+
+
+main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 2em;
+}
+
