added a section selector to css

--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -31,3 +31,16 @@ main {
   padding: 2em;
 }
 
+section {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content:center;
+  }
+  
+  
+  
+  
+   
+  
+  
+
