2nd article selector for heading 2

--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -45,4 +45,8 @@ section {
     border: 1px solid #ddd;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   } 
+
+  article h2 {
+    margin-top: 0;
+  }
  
