--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -75,3 +75,15 @@ section {
     color: #23527c;
   }
 
+  footer {
+    background-color: #333;
+    color: #fff;
+    padding: 1em;
+    text-align: center;
+    clear: both;
+  }
+  
+  footer p {
+    margin-bottom: 0;
+  }
+  
