--- a/Wireframe/css/style.css
+++ b/Wireframe/css/style.css
@@ -1,3 +1,17 @@
+/* #region General styles */
+* {
+    padding: 0;
+    margin: 0;
+}
+.text-center{
+    text-align: center;
+}
+a{
+    text-decoration: none;
+    color: #fbc7bb;
+}
+
+/* #endregion General styles */
 
 .wrapper{
     max-width: 80%;
@@ -7,3 +21,15 @@
 .article-block_img1{
     width: 100%;
 }
+
+
+
+/* #region Footer styles */
+.footer{
+    background-color: #f64d27;
+    padding: 20px;
+    color: #f0efe7;
+
+}
+/* #endregion Footer styles */
+
